--- a/frontend/website/angular.json
+++ b/frontend/website/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "598d55c3-45fc-4d53-a79a-573ce22af477"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
