--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/bigbrosecurity
+spring.datasource.url=jdbc:mysql://localhost:3306/BigBroSecurity
 spring.datasource.username=root
-spring.datasource.password=flutter1!
+spring.datasource.password=rootuser1!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
+spring.liquibase.change-log=classpath:db/changelog/changelog-master.xml
