--- a/frontend/website/package.json
+++ b/frontend/website/package.json
@@ -2,8 +2,8 @@
   "name": "website",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
     "start": "ng serve --proxy-config proxy.conf.json",
+    "ng": "ng",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -20,6 +20,14 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "axios": "^0.21.4",
+    "body-parser": "^1.19.1",
+    "express": "^4.17.2",
+    "https": "^1.0.0",
+    "node-fetch": "^3.2.0",
+    "node-schedule": "^2.1.0",
+    "nodemailer": "^6.7.2",
+    "request": "^2.81.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
