--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -5,3 +5,10 @@ spring.datasource.password=rootuser1!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 spring.liquibase.change-log=classpath:db/changelog/changelog-master.xml
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=bigbroscap101@gmail.com
+spring.mail.password=BigBro101!
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
