--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
 
   web_socket_channel:
 
-  splashscreen:
+  flutter_vlc_player: ^7.1.2
 
   http: ^0.13.4
   # The following adds the Cupertino Icons font to your application.
